@@ -1,20 +1,36 @@
+@file:Suppress("UnstableApiUsage")
+
+import aQute.bnd.gradle.BundleTaskExtension
 import com.vanniktech.maven.publish.JavadocJar
-import com.vanniktech.maven.publish.KotlinJvm
+import com.vanniktech.maven.publish.KotlinMultiplatform
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
+import ru.vyarus.gradle.plugin.animalsniffer.AnimalSnifferExtension
 
 plugins {
-  kotlin("jvm")
+  kotlin("multiplatform")
+  id("com.android.library")
   kotlin("plugin.serialization")
   id("org.jetbrains.dokka")
   id("com.vanniktech.maven.publish.base")
   id("binary-compatibility-validator")
+  id("io.github.gmazzo.aar2jar") version "1.0.1"
 }
 
-// Build & use okhttp3/internal/-InternalVersion.kt
+val platform = System.getProperty("okhttp.platform", "jdk9")
+val testJavaVersion = System.getProperty("test.java.version", "21").toInt()
+
 val copyKotlinTemplates = tasks.register<Copy>("copyKotlinTemplates") {
-  from("src/main/kotlinTemplates")
-  into("$buildDir/generated/sources/kotlinTemplates")
-  expand("projectVersion" to project.version)
+  val kotlinTemplatesOutput = layout.buildDirectory.dir("generated/sources/kotlinTemplates")
+
+  from("src/commonJvmAndroid/kotlinTemplates")
+  into(kotlinTemplatesOutput)
+
   filteringCharset = Charsets.UTF_8.toString()
+
+  expand(
+    // Build & use okhttp3/internal/-InternalVersion.kt
+    "projectVersion" to project.version,
+  )
 }
 
 // Build & use okhttp3/internal/idn/IdnaMappingTableInstance.kt
@@ -22,131 +38,256 @@ val generateIdnaMappingTableConfiguration: Configuration by configurations.creat
 dependencies {
   generateIdnaMappingTableConfiguration(projects.okhttpIdnaMappingTable)
 }
-val generateIdnaMappingTable by tasks.creating(JavaExec::class.java) {
-  outputs.dir("$buildDir/generated/sources/idnaMappingTable")
+val generateIdnaMappingTable = tasks.register<JavaExec>("generateIdnaMappingTable") {
+  val idnaOutput = layout.buildDirectory.dir("generated/sources/idnaMappingTable")
+
+  outputs.dir(idnaOutput)
   mainClass.set("okhttp3.internal.idn.GenerateIdnaMappingTableCode")
-  args("$buildDir/generated/sources/idnaMappingTable")
+  args(idnaOutput.get())
   classpath = generateIdnaMappingTableConfiguration
 }
 
 kotlin {
+  jvmToolchain(8)
+
+  jvm {
+//    withJava() /* <- cannot be used when the Android Plugin is present */
+  }
+
+  androidTarget {
+    compilerOptions {
+      jvmTarget.set(JvmTarget.JVM_17)
+    }
+  }
+
   sourceSets {
-    getByName("main") {
-      kotlin.srcDir(copyKotlinTemplates.get().outputs)
-      kotlin.srcDir(generateIdnaMappingTable.outputs)
+    val commonJvmAndroid = create("commonJvmAndroid") {
+      dependsOn(commonMain.get())
+
+      kotlin.srcDir(copyKotlinTemplates.map { it.outputs })
+      kotlin.srcDir(generateIdnaMappingTable.map { it.outputs })
+
+      dependencies {
+        api(libs.squareup.okio)
+        api(libs.kotlin.stdlib)
+
+        compileOnly(libs.findbugs.jsr305)
+        compileOnly(libs.animalsniffer.annotations)
+      }
+    }
+
+    commonTest {
+      dependencies {
+        implementation(projects.okhttpTestingSupport)
+        implementation(libs.assertk)
+        implementation(libs.kotlin.test.annotations)
+        implementation(libs.kotlin.test.common)
+        implementation(libs.kotlin.test.junit)
+        implementation(libs.junit)
+        implementation(libs.junit.jupiter.api)
+        implementation(libs.junit.jupiter.params)
+      }
+    }
+
+    androidMain {
+      dependsOn(commonJvmAndroid)
+      dependencies {
+        compileOnly(libs.bouncycastle.bcprov)
+        compileOnly(libs.bouncycastle.bctls)
+        compileOnly(libs.conscrypt.openjdk)
+        implementation(libs.androidx.annotation)
+        implementation(libs.androidx.startup.runtime)
+      }
+    }
+
+    jvmMain {
+      dependsOn(commonJvmAndroid)
+
+      dependencies {
+        // These compileOnly dependencies must also be listed in the OSGi configuration above.
+        compileOnly(libs.conscrypt.openjdk)
+        compileOnly(libs.bouncycastle.bcprov)
+        compileOnly(libs.bouncycastle.bctls)
+
+        // graal build support
+        compileOnly(libs.nativeImageSvm)
+        compileOnly(libs.openjsse)
+      }
+    }
+
+    val jvmTest by getting {
+      dependencies {
+        implementation(projects.okhttpTestingSupport)
+        implementation(libs.assertk)
+        implementation(libs.kotlin.test.annotations)
+        implementation(libs.kotlin.test.common)
+        implementation(libs.kotlinx.serialization.core)
+        implementation(libs.kotlinx.serialization.json)
+        implementation(projects.okhttpJavaNetCookiejar)
+        implementation(projects.okhttpTls)
+        implementation(projects.okhttpUrlconnection)
+        implementation(projects.mockwebserver3)
+        implementation(projects.mockwebserver3Junit4)
+        implementation(projects.mockwebserver3Junit5)
+        implementation(projects.mockwebserver)
+        implementation(projects.loggingInterceptor)
+        implementation(projects.okhttpBrotli)
+        implementation(projects.okhttpDnsoverhttps)
+        implementation(projects.okhttpIdnaMappingTable)
+        implementation(projects.okhttpSse)
+        implementation(projects.okhttpCoroutines)
+        implementation(libs.kotlinx.coroutines.core)
+        implementation(libs.squareup.moshi)
+        implementation(libs.squareup.moshi.kotlin)
+        implementation(libs.squareup.okio.fakefilesystem)
+        implementation(libs.conscrypt.openjdk)
+        implementation(libs.junit)
+        implementation(libs.junit.jupiter.api)
+        implementation(libs.junit.jupiter.params)
+        implementation(libs.kotlin.test.junit)
+        implementation(libs.openjsse)
+        compileOnly(libs.findbugs.jsr305)
+
+        implementation(libs.junit.jupiter.engine)
+        implementation(libs.junit.vintage.engine)
+
+        if (platform == "conscrypt") {
+          implementation(rootProject.libs.conscrypt.openjdk)
+        } else if (platform == "openjsse") {
+          implementation(rootProject.libs.openjsse)
+        }
+      }
+    }
+
+    val androidUnitTest by getting {
+      dependencies {
+        implementation(libs.assertk)
+        implementation(libs.kotlin.test.annotations)
+        implementation(libs.kotlin.test.common)
+        implementation(libs.androidx.junit)
+
+        implementation(libs.junit.jupiter.engine)
+        implementation(libs.junit.vintage.engine)
+
+        implementation(libs.robolectric)
+      }
     }
   }
 }
 
-project.applyOsgi(
-  "Export-Package: okhttp3,okhttp3.internal.*;okhttpinternal=true;mandatory:=okhttpinternal",
-  "Import-Package: " +
-    "android.*;resolution:=optional," +
-    "com.oracle.svm.core.annotate;resolution:=optional," +
-    "com.oracle.svm.core.configure;resolution:=optional," +
-    "dalvik.system;resolution:=optional," +
-    "org.conscrypt;resolution:=optional," +
-    "org.bouncycastle.*;resolution:=optional," +
-    "org.openjsse.*;resolution:=optional," +
-    "org.graalvm.nativeimage;resolution:=optional," +
-    "org.graalvm.nativeimage.hosted;resolution:=optional," +
-    "sun.security.ssl;resolution:=optional,*",
-  "Automatic-Module-Name: okhttp3",
-  "Bundle-SymbolicName: com.squareup.okhttp3"
-)
-
-normalization {
-  runtimeClasspath {
-    /*
-       - The below two ignored files are generated during test execution
-       by the test: okhttp/src/test/java/okhttp3/osgi/OsgiTest.java
-
-       - The compressed index.xml file contains a timestamp property which
-       changes with every test execution, such that running the test
-       actually changes the test classpath itself. This means that it
-       can"t benefit from incremental build acceleration, because on every
-       execution it sees that the classpath has changed, and so to be
-       safe, it needs to re-run.
-
-       - This is unfortunate, because actually it would be safe to declare
-       the task as up-to-date, because these two files, which are based on
-       the generated index.xml, are outputs, not inputs. We can be sure of
-       this because they are deleted in the @BeforeEach method of the
-       OsgiTest test class.
-
-       - To enable the benefit of incremental builds, we can ask Gradle
-       to ignore these two files when considering whether the classpath
-       has changed. That is the purpose of this normalization block.
-   */
-    ignore("okhttp3/osgi/workspace/cnf/repo/index.xml.gz")
-    ignore("okhttp3/osgi/workspace/cnf/repo/index.xml.gz.sha")
+if (platform == "jdk8alpn") {
+  // Add alpn-boot on Java 8 so we can use HTTP/2 without a stable API.
+  val alpnBootVersion = alpnBootVersion()
+  if (alpnBootVersion != null) {
+    val alpnBootJar = configurations.detachedConfiguration(
+      dependencies.create("org.mortbay.jetty.alpn:alpn-boot:$alpnBootVersion")
+    ).singleFile
+    tasks.withType<Test> {
+      jvmArgs("-Xbootclasspath/p:${alpnBootJar}")
+    }
   }
 }
 
-// Expose OSGi jars to the test environment.
-val osgiTestDeploy: Configuration by configurations.creating
+android {
+  compileSdk = 34
 
-val copyOsgiTestDeployment by tasks.creating(Copy::class.java) {
-  from(osgiTestDeploy)
-  into("$buildDir/resources/test/okhttp3/osgi/deployments")
-}
-tasks.getByName("test") {
-  dependsOn(copyOsgiTestDeployment)
+  namespace = "okhttp.okhttp3"
+
+  defaultConfig {
+    minSdk = 21
+
+    consumerProguardFiles("okhttp3.pro")
+  }
+
+  testOptions {
+    unitTests {
+      isIncludeAndroidResources = true
+    }
+  }
+
+  sourceSets {
+    named("main") {
+      manifest.srcFile("src/androidMain/AndroidManifest.xml")
+      assets.srcDir("src/androidMain/assets")
+    }
+  }
 }
 
+// Hack to make BundleTaskExtension pass briefly
+project.extensions
+  .getByType(JavaPluginExtension::class.java)
+  .sourceSets.create("main")
+
+// Call the convention when the task has finished, to modify the jar to contain OSGi metadata.
+tasks.named<Jar>("jvmJar").configure {
+  val bundleExtension = extensions.create(
+    BundleTaskExtension.NAME,
+    BundleTaskExtension::class.java,
+    this,
+  ).apply {
+    classpath(libs.kotlin.stdlib.osgi.map { it.artifacts }, tasks.named("jvmMainClasses").map { it.outputs })
+    bnd(
+      "Export-Package: okhttp3,okhttp3.internal.*;okhttpinternal=true;mandatory:=okhttpinternal",
+      "Import-Package: " +
+        "com.oracle.svm.core.annotate;resolution:=optional," +
+        "com.oracle.svm.core.configure;resolution:=optional," +
+        "dalvik.system;resolution:=optional," +
+        "org.conscrypt;resolution:=optional," +
+        "org.bouncycastle.*;resolution:=optional," +
+        "org.openjsse.*;resolution:=optional," +
+        "org.graalvm.nativeimage;resolution:=optional," +
+        "org.graalvm.nativeimage.hosted;resolution:=optional," +
+        "sun.security.ssl;resolution:=optional,*",
+      "Automatic-Module-Name: okhttp3",
+      "Bundle-SymbolicName: com.squareup.okhttp3"
+    )
+  }
+
+  doLast {
+    bundleExtension.buildAction().execute(this)
+  }
+}
+
+val checkstyleConfig: Configuration by configurations.named("checkstyleConfig")
 dependencies {
-  api(libs.squareup.okio)
-  api(libs.kotlin.stdlib)
+  // Everything else requires Android API 21+.
+  "signature"(rootProject.libs.signature.android.apilevel21) { artifact { type = "signature" } }
 
-  // These compileOnly dependencies must also be listed in the OSGi configuration above.
-  compileOnly(libs.robolectric.android)
-  compileOnly(libs.bouncycastle.bcprov)
-  compileOnly(libs.bouncycastle.bctls)
-  compileOnly(libs.conscrypt.openjdk)
-  compileOnly(libs.openjsse)
-  compileOnly(libs.findbugs.jsr305)
-  compileOnly(libs.animalsniffer.annotations)
+  // OkHttp requires Java 8+.
+  "signature"(rootProject.libs.codehaus.signature.java18) { artifact { type = "signature" } }
 
-  // graal build support
-  compileOnly(libs.nativeImageSvm)
-
-  testCompileOnly(libs.bouncycastle.bctls)
-  testImplementation(projects.okhttpTestingSupport)
-  testImplementation(libs.assertk)
-  testImplementation(libs.kotlin.test.annotations)
-  testImplementation(libs.kotlin.test.common)
-  testImplementation(libs.kotlinx.serialization.core)
-  testImplementation(libs.kotlinx.serialization.json)
-  testImplementation(projects.okhttpJavaNetCookiejar)
-  testImplementation(projects.okhttpTls)
-  testImplementation(projects.okhttpUrlconnection)
-  testImplementation(projects.mockwebserver3)
-  testImplementation(projects.mockwebserver3Junit4)
-  testImplementation(projects.mockwebserver3Junit5)
-  testImplementation(projects.mockwebserver)
-  testImplementation(projects.loggingInterceptor)
-  testImplementation(projects.okhttpBrotli)
-  testImplementation(projects.okhttpDnsoverhttps)
-  testImplementation(projects.okhttpIdnaMappingTable)
-  testImplementation(projects.okhttpSse)
-  testImplementation(projects.okhttpCoroutines)
-  testImplementation(libs.kotlinx.coroutines.core)
-  testImplementation(libs.squareup.moshi)
-  testImplementation(libs.squareup.moshi.kotlin)
-  testImplementation(libs.squareup.okio.fakefilesystem)
-  testImplementation(libs.conscrypt.openjdk)
-  testImplementation(libs.junit)
-  testImplementation(libs.junit.jupiter.api)
-  testImplementation(libs.junit.jupiter.params)
-  testImplementation(libs.kotlin.test.junit)
-  testImplementation(libs.openjsse)
-  testImplementation(libs.aqute.resolve)
-  testCompileOnly(libs.findbugs.jsr305)
-
-  osgiTestDeploy(libs.eclipseOsgi)
-  osgiTestDeploy(libs.kotlin.stdlib.osgi)
+  checkstyleConfig(rootProject.libs.checkStyle) {
+    isTransitive = false
+  }
 }
+
+// Animal Sniffer confirms we generally don't use APIs not on Java 8.
+configure<AnimalSnifferExtension> {
+  annotation = "okhttp3.internal.SuppressSignatureCheck"
+}
+
+configure<CheckstyleExtension> {
+  config = resources.text.fromArchiveEntry(checkstyleConfig, "google_checks.xml")
+  toolVersion = rootProject.libs.versions.checkStyle.get()
+  // TODO switch out checkstyle to use something supporting KMP
+  sourceSets = listOf(project.sourceSets["main"])
+}
+
+afterEvaluate {
+  tasks.withType<Test> {
+    if (javaLauncher.get().metadata.languageVersion.asInt() < 9) {
+      // Work around robolectric requirements and limitations
+      // https://cs.android.com/android-studio/platform/tools/base/+/mirror-goog-studio-main:build-system/gradle-core/src/main/java/com/android/build/gradle/tasks/factory/AndroidUnitTest.java;l=339
+      allJvmArgs = allJvmArgs.filter { !it.startsWith("--add-opens") }
+      filter {
+        excludeTest("okhttp3.internal.publicsuffix.PublicSuffixDatabaseTest", null)
+      }
+    }
+  }
+}
+
+apply(plugin = "io.github.usefulness.maven-sympathy")
 
 mavenPublishing {
-  configure(KotlinJvm(javadocJar = JavadocJar.Empty()))
+  configure(KotlinMultiplatform(javadocJar = JavadocJar.Empty(), androidVariantsToPublish = listOf("release")))
 }
